--- a/index.html
+++ b/index.html
@@ -4,5 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>TiendaNova</title>
+  <title>PetShopNova - Tu Tienda de Mascotas</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <header>
+    <div class="logo">
+      <h1>PetShopNova</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Productos</a></li>
+        <li><a href="#">Ofertas</a></li>
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Sobre Nosotros</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="introduccion">
+      <h2>Bienvenidos a PetShopNova</h2>
+      <p>La mejor tienda de productos para tus mascotas. Explora nuestras ofertas y encuentra lo que tu mascota necesita.</p>
+    </section>
+
+    <section class="productos">
+      <h2>Productos Destacados</h2>
+      <div class="grid-productos">
+
+        <article class="producto">
+          <img src="images/comida_perros.jpg" alt="Comida para perros">
+          <h3>Comida para Perros</h3>
+          <p>Nutrición completa y balanceada.</p>
+          <button>Añadir al carrito</button>
+        </article>
+
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 PetShopNova. Todos los derechos reservados.</p>
+    <ul>
+      <li><a href="#">Política de privacidad</a></li>
+      <li><a href="#">Términos y condiciones</a></li>
+    </ul>
+  </footer>
+</body>
+</html>
+
 
