--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
       <div class="grid-productos">
 
         <article class="producto">
-          <img src="images/comida_perros.webp" alt="Comida para perros">
+          <img src="Images/comida_perros.webp" alt="Comida para perros">
           <h3>Comida para Perros</h3>
           <p>Nutrición completa y balanceada.</p>
           <button>Añadir al carrito</button>
         </article>
 
         <article class="producto">
-          <img src="images/cama_perros.webp" alt="Cama para perros">
+          <img src="Images/cama_perros.webp" alt="Cama para perros">
           <h3>Cama para Perros</h3>
           <p>Comodidad para tu mascota.</p>
           <button>Añadir al carrito</button>
         </article>
 
         <article class="producto">
-          <img src="images/comida_gatos.webp" alt="Comida para gatos">
+          <img src="Images/comida_gatos.webp" alt="Comida para gatos">
           <h3>Comida para Gatos</h3>
           <p>Nutrición completa y balanceada.</p>
           <button>Añadir al carrito</button>
         </article>
 
         <article class="producto">
-          <img src="images/juguete_perros.webp" alt="Juguete para perros">
+          <img src="Images/juguete_perros.webp" alt="Juguete para perros">
           <h3>Juguete para Perros</h3>
           <p>Horas y horas de diversion para tu peludo.</p>
           <button>Añadir al carrito</button>
         </article>
 
         <article class="producto">
-          <img src="images/juguete_gatos.webp" alt="Juguete para gatos">
+          <img src="Images/juguete_gatos.webp" alt="Juguete para gatos">
           <h3>Juguete para Gatos</h3>
           <p>Diversion asegurada para tu mascota.</p>
           <button>Añadir al carrito</button>
         </article>
 
         <article class="producto">
-          <img src="images/gimnasio_gatos.webp" alt="Gimnasio para gatos">
+          <img src="Images/gimnasio_gatos.webp" alt="Gimnasio para gatos">
           <h3>Gimnasio para Gatos</h3>
           <p>Entretenimiento unico para tus gatos.</p>
           <button>Añadir al carrito</button>
