--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     const productosContainer = document.getElementById('productos-container');
 
     // Cargar productos desde la API del servidor
-    fetch('http://localhost:3000/api/productos')
+    fetch('https://pet-shop-nova-c2n0kmlq7-maikol-fernandezs-projects.vercel.app/api/productos')
       .then(response => response.json())
       .then(productos => {
         productos.forEach(producto => {
