--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <script>
     const productosContainer = document.getElementById('productos-container');
 
-    fetch('https://pet-shop-nova.vercel.app/api/productos')
+    fetch('https://pet-shop-nova-dvsh2t9po-maikol-fernandezs-projects.vercel.app/api/productos')
       .then(response => response.json())
       .then(productos => {
         productos.forEach(producto => {
