--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   <script>
     const productosContainer = document.getElementById('productos-container');
 
-    fetch('https://pet-shop-nova-dvsh2t9po-maikol-fernandezs-projects.vercel.app/api/productos')
+    // Cargar productos desde la API del servidor
+    fetch('http://localhost:3000/api/productos')
       .then(response => response.json())
       .then(productos => {
         productos.forEach(producto => {
